2019-1/231/users/4232/executions/1796_1595.log
== TEST (2019-05-30 18:17:29) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno"))
t=0
soma=0
while(t<size[n]):
	soma=soma+1
	t=t+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:46) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno:)
t=0
soma=0
while(t<size[n]):
	soma=soma+1
	t=t+1
-- ERROR:
File "XXXX", line 2
    n=array(input("Notas do aluno:)
                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:59) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: ))
t=0
soma=0
while(t<size[n]):
	soma=soma+1
	t=t+1
-- ERROR:
File "XXXX", line 2
    n=array(input("Notas do aluno: ))
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:18:22) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size[n]):
	soma=soma+1
	t=t+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:35) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size[n]):
	soma=soma+1
	t=t+1
print(round(sum[n]/(size[n]-min[n]),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:20) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size[n]):
	soma=soma+t
	t=t+1
print(round(sum[n]/(size[n]-min[n]),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:52) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size(n))
	soma=soma+t
	t=t+1
print(round(sum[n]/(size[n]-min[n]),2))
-- ERROR:
File "XXXX", line 5
    while(t<size(n))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:59) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
print(round(sum[n]/(size[n]-min[n]),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:39:09) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size[n]):
	soma=soma+t
	t=t+1
print(round(sum[n]/(size[n]-min[n]),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:30) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
print(round(sum[n]/(size[n]-min[n]),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:45:03) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
print(round(sum(n)/size(n)-min(n),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:47:15) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
print(round(soma/size(n)-min(n),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:10) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:55) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size[n]):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:54:20) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<sis[n]):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- EXECUTION TIME:
0.507637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1796/1595/main.py", line 5, in <module>
    while(t<sis[n]):
NameError: name 'sis' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:21) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<sis[n]):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:54:24) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<sis[n]):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- EXECUTION TIME:
0.489621
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1796/1595/main.py", line 5, in <module>
    while(t<sis[n]):
NameError: name 'sis' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:24) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<sis[n]):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:55:19) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<sise[n]):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:55:53) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size[n]):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:56:28) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:59:08) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=size(n)-min(n)
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:59:51) 
-- CODE:
from numpy import*
n=array(input("Notas do aluno: "))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=size(n)-min(n)
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:07:26) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=size(n)-min(n)
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:52) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(soma/media),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:11:15) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=size[n]-min[n]
print(round(media/soma),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:08) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=size(n)-min(n)
print(round(media/soma),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:21) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=size(n)-min(n)
print(round(media/soma),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:30) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=sum(n)-min(n)
print(round(media/soma),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:14:21) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=sum(n)-min(n)
print(round(media/soma,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:17:15) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=sum(n)-min(n)
print(round(soma/media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:30) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
media=sum(n)-min(n)
print(round(soma/media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:32:13) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:32:41) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:33) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size[n]):
	soma=soma+t
	t=t+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:42:19) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size[n]):
	soma=soma+t
	t=t+1
print(round((sum[n]-min[n])/(soma-1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:43:11) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size[n]):
	soma=soma+t
	t=t+1
print(round((sum[n]-min[n])/(soma-1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:43:50) 
-- CODE:
from numpy import*
n=array(eval(input("Digite as notas do aluno: ")))
t=0
soma=0
while(t<size(n)):
	soma=soma+t
	t=t+1
print(round((sum[n]-min[n])/(soma-1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
